<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This file is part of Tuner.
  ~ Copyright (C) 2026 Philipp Bobek <philipp.bobek@mailbox.org>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Tuner is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="tuner">Tuner</string>
    <string name="tuner_permission_rationale">Microphone access is required to detect the pitch of your instrument.</string>
    <string name="tuner_grant_permission">Grant permission</string>
    <string name="tuner_listening">Listening…</string>
    <string name="navigate_back">Navigate back</string>
    <string name="settings">Settings</string>
    <string name="reference_pitch">Reference Pitch</string>
    <string name="reference_pitch_display">Reference: %1$d Hz</string>
    <string name="reference_pitch_value">%1$d Hz</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="solfege_notation">Solfège Notation</string>
    <string name="solfege_notation_summary">Do, Ré, Mi… instead of C, D, E…</string>
    <string name="display">Display</string>
    <string name="night_mode">Theme</string>
    <string name="night_mode_follow_system">Follow system</string>
    <string name="night_mode_no">Light</string>
    <string name="night_mode_yes">Dark</string>
    <string name="about">About</string>
    <string name="author">Author</string>
    <string name="license">License</string>
    <string name="third_party_licenses">Third-party licenses</string>
    <string name="third_party_licenses_summary">Licenses of the open-source libraries used in this app.</string>
    <string name="source_code">Source code</string>
    <string name="version">Version</string>
    <string name="source_code_name" translatable="false">GitHub</string>
    <string name="license_name" translatable="false">GNU GPLv3</string>
    <string name="author_name" translatable="false">Philipp Bobek</string>
</resources>
